Bug 1957971 – The Sponsored label is displayed inside of the Leaderboard and Billboard banners and it's hardly visible. r=home-newtab-reviewers,thecount
Differential Revision: https://phabricator.services.mozilla.com/D245506

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/AdBanner/_AdBanner.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/AdBanner/_AdBanner.scss
@@ -40,14 +40,12 @@
         width: var(--leaderboard-width);
       }
 
-      .ad-banner-content {
-        height: var(--leaderboard-height);
-        width: var(--leaderboard-width);
-        margin: 0 auto;
-      }
-
       .ad-banner-sponsored {
         width: var(--leaderboard-width);
+      }
+
+      .ad-banner-link {
+        display: inline-block;
       }
 
       @media (width <= 758px) {
